--- a/notebook/Notebook TP1.ipynb
+++ b/notebook/Notebook TP1.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "2a5fb373",
+   "execution_count": 1,
+   "id": "d95686d2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "e376a57b",
+   "execution_count": 2,
+   "id": "1dbc7cfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,13 +42,29 @@
     "            batch = pd.read_csv(file_path)\n",
     "            df = pd.concat([df, batch], sort=True)\n",
     "    \n",
+    "    return df\n",
+    "\n",
+    "def clean(df):\n",
+    "    \"\"\"Clean dataframe.\"\"\"\n",
+    "    \n",
+    "    df.columns = df.columns.str.lower().str.replace(' ', '_')\n",
+    "    df['order_date'] = pd.to_datetime(df['order_date'])\n",
+    "    df = df.rename(columns={'order_number': 'order_id'})\n",
+    "    df = df.sort_values('order_date')\n",
+    "    df['total_product_price'] = df['quantity'] * df['product_price']\n",
+    "    df['cash_in'] = df.groupby('order_id')['total_product_price'].transform(np.sum)\n",
+    "    df = df.drop(columns=['item_name', 'quantity', 'product_price', \n",
+    "                          'total_products', 'total_product_price'],\n",
+    "                errors=\"ignore\")\n",
+    "    df = df.drop_duplicates()\n",
+    "    df = df.reset_index(drop=True)\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "01521860",
+   "execution_count": 38,
+   "id": "a751e4f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,8 +74,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "0d8a043b",
+   "execution_count": 40,
+   "id": "adddaf1e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "21d628f0",
    "metadata": {},
    "outputs": [
     {
@@ -82,93 +107,137 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Item Name</th>\n",
-       "      <th>Order Date</th>\n",
-       "      <th>Order Number</th>\n",
-       "      <th>Product Price</th>\n",
-       "      <th>Quantity</th>\n",
-       "      <th>Total products</th>\n",
+       "      <th>order_date</th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>cash_in</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Mango Chutney</td>\n",
-       "      <td>2017-01-28 19:14:00</td>\n",
-       "      <td>4416</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
+       "      <td>2017-01-23 16:54:00</td>\n",
+       "      <td>4347</td>\n",
+       "      <td>44.65</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Mango Chutney</td>\n",
-       "      <td>2017-01-28 18:41:00</td>\n",
-       "      <td>4414</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>13</td>\n",
+       "      <td>2017-01-23 17:52:00</td>\n",
+       "      <td>4348</td>\n",
+       "      <td>29.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Mint Sauce</td>\n",
-       "      <td>2017-01-28 18:41:00</td>\n",
-       "      <td>4414</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>13</td>\n",
+       "      <td>2017-01-23 18:15:00</td>\n",
+       "      <td>4349</td>\n",
+       "      <td>26.30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Mango Chutney</td>\n",
-       "      <td>2017-01-28 18:28:00</td>\n",
-       "      <td>4413</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
+       "      <td>2017-01-23 19:11:00</td>\n",
+       "      <td>4350</td>\n",
+       "      <td>22.70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Mango Chutney</td>\n",
-       "      <td>2017-01-28 12:32:00</td>\n",
-       "      <td>4402</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
+       "      <td>2017-01-23 19:12:00</td>\n",
+       "      <td>4351</td>\n",
+       "      <td>26.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>204</th>\n",
+       "      <td>2017-02-12 20:04:00</td>\n",
+       "      <td>7613</td>\n",
+       "      <td>39.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>205</th>\n",
+       "      <td>2017-02-12 20:37:00</td>\n",
+       "      <td>7614</td>\n",
+       "      <td>34.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>206</th>\n",
+       "      <td>2017-02-12 20:51:00</td>\n",
+       "      <td>7615</td>\n",
+       "      <td>16.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>207</th>\n",
+       "      <td>2017-02-12 21:06:00</td>\n",
+       "      <td>7616</td>\n",
+       "      <td>17.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>208</th>\n",
+       "      <td>2017-02-12 21:25:00</td>\n",
+       "      <td>7617</td>\n",
+       "      <td>19.75</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>209 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Item Name           Order Date  Order Number  Product Price  Quantity  \\\n",
-       "0  Mango Chutney  2017-01-28 19:14:00          4416            0.5         3   \n",
-       "1  Mango Chutney  2017-01-28 18:41:00          4414            0.5         1   \n",
-       "2     Mint Sauce  2017-01-28 18:41:00          4414            0.5         1   \n",
-       "3  Mango Chutney  2017-01-28 18:28:00          4413            0.5         1   \n",
-       "4  Mango Chutney  2017-01-28 12:32:00          4402            0.5         1   \n",
+       "             order_date  order_id  cash_in\n",
+       "0   2017-01-23 16:54:00      4347    44.65\n",
+       "1   2017-01-23 17:52:00      4348    29.00\n",
+       "2   2017-01-23 18:15:00      4349    26.30\n",
+       "3   2017-01-23 19:11:00      4350    22.70\n",
+       "4   2017-01-23 19:12:00      4351    26.70\n",
+       "..                  ...       ...      ...\n",
+       "204 2017-02-12 20:04:00      7613    39.65\n",
+       "205 2017-02-12 20:37:00      7614    34.85\n",
+       "206 2017-02-12 20:51:00      7615    16.35\n",
+       "207 2017-02-12 21:06:00      7616    17.75\n",
+       "208 2017-02-12 21:25:00      7617    19.75\n",
        "\n",
-       "   Total products  \n",
-       "0               4  \n",
-       "1              13  \n",
-       "2              13  \n",
-       "3               6  \n",
-       "4              10  "
+       "[209 rows x 3 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ee2dfc3",
+   "id": "c8b0b715",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a5787c0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f046e35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19fd8b8e",
    "metadata": {},
    "outputs": [],
    "source": []
