feat: add merge function

--- a/notebook/Notebook TP1.ipynb
+++ b/notebook/Notebook TP1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d95686d2",
+   "id": "446ab660",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "1dbc7cfc",
+   "execution_count": 26,
+   "id": "a95cc581",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,32 +58,56 @@
     "                errors=\"ignore\")\n",
     "    df = df.drop_duplicates()\n",
     "    df = df.reset_index(drop=True)\n",
+    "    return df\n",
+    "\n",
+    "def merge(df1, df2):\n",
+    "    df = pd.concat([df1, df2])\n",
+    "    df = df.drop(columns = ['order_id'])\n",
+    "    df = df.sort_values('order_date')\n",
+    "    df = df.reset_index(drop=True)\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "a751e4f7",
+   "execution_count": 27,
+   "id": "f8158b13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = extract(data_dir= \"/Users/CORENTIN/data-corentinv/tp-intro-mlops\",\n",
-    "       prefix=\"restaurant_1\" , start_week=108, end_week=110)"
+    "# Restaurant 1\n",
+    "df1 = extract(data_dir= \"/Users/CORENTIN/data-corentinv/tp-intro-mlops\",\n",
+    "       prefix=\"restaurant_1\" , start_week=108, end_week=110)\n",
+    "df1 = clean(df1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "adddaf1e",
+   "execution_count": 28,
+   "id": "49f36e40",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Restaurant 2\n",
+    "df2 = extract(data_dir= \"/Users/CORENTIN/data-corentinv/tp-intro-mlops\",\n",
+    "       prefix=\"restaurant_2\" , start_week=108, end_week=110)\n",
+    "df2 = clean(df2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "21d628f0",
+   "execution_count": 29,
+   "id": "c2312401",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = merge(df1, df2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "911c95af",
    "metadata": {},
    "outputs": [
     {
@@ -108,136 +132,61 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>order_date</th>\n",
-       "      <th>order_id</th>\n",
        "      <th>cash_in</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2017-01-23 16:54:00</td>\n",
-       "      <td>4347</td>\n",
-       "      <td>44.65</td>\n",
+       "      <td>2017-01-23 16:01:00</td>\n",
+       "      <td>35.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2017-01-23 17:52:00</td>\n",
-       "      <td>4348</td>\n",
-       "      <td>29.00</td>\n",
+       "      <td>2017-01-23 16:54:00</td>\n",
+       "      <td>44.65</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2017-01-23 18:15:00</td>\n",
-       "      <td>4349</td>\n",
-       "      <td>26.30</td>\n",
+       "      <td>2017-01-23 17:33:00</td>\n",
+       "      <td>37.70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2017-01-23 19:11:00</td>\n",
-       "      <td>4350</td>\n",
-       "      <td>22.70</td>\n",
+       "      <td>2017-01-23 17:52:00</td>\n",
+       "      <td>29.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2017-01-23 19:12:00</td>\n",
-       "      <td>4351</td>\n",
-       "      <td>26.70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>204</th>\n",
-       "      <td>2017-02-12 20:04:00</td>\n",
-       "      <td>7613</td>\n",
-       "      <td>39.65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>205</th>\n",
-       "      <td>2017-02-12 20:37:00</td>\n",
-       "      <td>7614</td>\n",
-       "      <td>34.85</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>206</th>\n",
-       "      <td>2017-02-12 20:51:00</td>\n",
-       "      <td>7615</td>\n",
-       "      <td>16.35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>207</th>\n",
-       "      <td>2017-02-12 21:06:00</td>\n",
-       "      <td>7616</td>\n",
-       "      <td>17.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>208</th>\n",
-       "      <td>2017-02-12 21:25:00</td>\n",
-       "      <td>7617</td>\n",
-       "      <td>19.75</td>\n",
+       "      <td>2017-01-23 18:07:00</td>\n",
+       "      <td>37.70</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>209 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             order_date  order_id  cash_in\n",
-       "0   2017-01-23 16:54:00      4347    44.65\n",
-       "1   2017-01-23 17:52:00      4348    29.00\n",
-       "2   2017-01-23 18:15:00      4349    26.30\n",
-       "3   2017-01-23 19:11:00      4350    22.70\n",
-       "4   2017-01-23 19:12:00      4351    26.70\n",
-       "..                  ...       ...      ...\n",
-       "204 2017-02-12 20:04:00      7613    39.65\n",
-       "205 2017-02-12 20:37:00      7614    34.85\n",
-       "206 2017-02-12 20:51:00      7615    16.35\n",
-       "207 2017-02-12 21:06:00      7616    17.75\n",
-       "208 2017-02-12 21:25:00      7617    19.75\n",
-       "\n",
-       "[209 rows x 3 columns]"
+       "           order_date  cash_in\n",
+       "0 2017-01-23 16:01:00    35.75\n",
+       "1 2017-01-23 16:54:00    44.65\n",
+       "2 2017-01-23 17:33:00    37.70\n",
+       "3 2017-01-23 17:52:00    29.00\n",
+       "4 2017-01-23 18:07:00    37.70"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "resample"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8b0b715",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a5787c0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f046e35",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19fd8b8e",
+   "id": "1bdba6a2",
    "metadata": {},
    "outputs": [],
    "source": []
